ci: add init container for triton
Signed-off-by: Tobias O <tobias.olenyi@tum.de>

--- a/.env.local
+++ b/.env.local
@@ -31,3 +31,4 @@ SERVER_TEMP_DATA_DIR=./storage/server_temp_files
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
 MODEL_REPOSITORY_PATH=./storage/model-repository
+MODELS_TO_INITIALIZE=
