ci: update init container command
Signed-off-by: Tobias O <tobias.olenyi@tum.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,11 +132,16 @@ services:
       start_period: 30s
 
   triton-model-init:
-    build:
-      context: ./storage/model-repository
-      dockerfile: Dockerfile.init
+    image: python:3.12-slim
+    command: >
+      sh -c "
+        apt-get update && apt-get install -y curl wget ca-certificates &&
+        pip install --no-cache-dir huggingface-hub httpx tqdm &&
+        python /models/init_models.py
+      "
     volumes:
       - triton_models:/models
+      - ./storage/model-repository/init_models.py:/models/init_models.py:ro
     environment:
       - SKIP_MODEL_VALIDATION=true
       - MODELS_TO_INITIALIZE=${MODELS_TO_INITIALIZE:-}
