--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-/storage/
+# Ignore storage except model-repository
+/storage/*
+!/storage/model-repository/
+
 /logs/
 /dist/
 /build/
@@ -9,6 +12,4 @@ __pycache__/
 *ipynb
 
 .DS_Store
-storage/model-repository/
-!storage/model-repository/*/*/*.pbtxt
-!storage/model-repository/*/*/**/*.py
+
