--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ authors = [
 license = {text = "GPL-3.0"}
 readme = "README.md"
 requires-python = ">=3.11.9,<3.14"
-
 dependencies = [
     # Backend
     "flask>=3.0.2,<4.0.0",
@@ -21,12 +20,13 @@ dependencies = [
     "rq>=2.1.0,<3.0.0",
     "python-dotenv>=1.0.1,<2.0.0",
     "gpytorch>=1.14,<2.0",
-    "onnxruntime-gpu>=1.16.0,<2.0.0",  # Replace with onnxruntime for cpu / onnxruntime-coreml for Darwin
-    "tritonclient[grpc]>=2.50.0",
+    "onnxruntime-gpu>=1.16.0,<2.0.0; sys_platform == 'linux'",
+    "onnxruntime>=1.16.0,<2.0.0; sys_platform != 'linux'",
+    "tritonclient[grpc]>=2.61.0",
     "circuitbreaker>=2.0.0",
 
     # Git Dependencies
-    "biotrainer @ git+https://github.com/sacdallago/biotrainer.git@main",
+    "biotrainer @ git+https://github.com/sacdallago/biotrainer.git@v1.0.0",
     "protspace @ git+https://github.com/tsenoner/protspace.git@v2.0.0",
     "hvi_toolkit @ git+https://github.com/SebieF/hvi_toolkit.git@maintenance/update-biotrainer",
     "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
@@ -47,3 +47,8 @@ build-backend = "hatchling.build"
 
 [tool.hatch.metadata]
 allow-direct-references = true
+
+[tool.uv]
+override-dependencies = [
+    "perf-analyzer>=2.59.1; sys_platform == 'linux'",
+]
