--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,10 @@ build-backend = "hatchling.build"
 [tool.hatch.metadata]
 allow-direct-references = true
 
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
+
+
 [tool.uv]
 override-dependencies = [
     "perf-analyzer>=2.59.1; sys_platform == 'linux'",
