chore: update resource requirements
Signed-off-by: Tobias O <tobias.olenyi@tum.de>

--- a/docker-compose.triton-test.yml
+++ b/docker-compose.triton-test.yml
@@ -3,6 +3,12 @@ services:
     build:
       context: ./storage/model-repository
       dockerfile: Dockerfile.triton
+    deploy:
+      resources:
+        limits:
+          memory: 24G  # ESM2-T36 (3B params) requires ~14-22GB for inference
+        reservations:
+          memory: 16G
     command: >
       tritonserver
       --model-repository=/models
