--- a/storage/model-repository/Dockerfile.init
+++ b/storage/model-repository/Dockerfile.init
@@ -1,9 +1,15 @@
 FROM python:3.12-slim
 
-# Install dependencies for model initialization
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    wget \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies for model initialization
 RUN pip install --no-cache-dir \
-    huggingface-hub \
-    requests \
+    httpx \
     tqdm
 
 # Copy initialization script
