--- a/storage/model-repository/Dockerfile.init
+++ b/storage/model-repository/Dockerfile.init
@@ -1,23 +1,13 @@
 FROM python:3.12-slim
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    wget \
-    ca-certificates \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y curl wget ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies for model initialization
-RUN pip install --no-cache-dir \
-    httpx \
-    tqdm
+RUN pip install --no-cache-dir httpx tqdm
 
-# Copy initialization script
 COPY init_models.py /usr/local/bin/init_models.py
 RUN chmod +x /usr/local/bin/init_models.py
 
-# Set working directory
 WORKDIR /models
 
-# Run initialization script
 ENTRYPOINT ["python", "/usr/local/bin/init_models.py"]
