chore: add example config for download
Signed-off-by: Tobias O <tobias.olenyi@tum.de>

--- a/.env.local
+++ b/.env.local
@@ -31,4 +31,34 @@ SERVER_TEMP_DATA_DIR=./storage/server_temp_files
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
 MODEL_REPOSITORY_PATH=./storage/model-repository
-MODELS_TO_INITIALIZE=
+
+MODEL_DOWNLOADS="
+_bind_embed_cv0:https://example.com/bind_embed_cv0.onnx
+_bind_embed_cv1:https://example.com/bind_embed_cv1.onnx
+_bind_embed_cv2:https://example.com/bind_embed_cv2.onnx
+_bind_embed_cv3:https://example.com/bind_embed_cv3.onnx
+_bind_embed_cv4:https://example.com/bind_embed_cv4.onnx
+_internal_esm2_t33_onnx:https://example.com/esm2_t33.onnx
+_tmbed_cv0:https://example.com/tmbed_cv0.onnx
+_tmbed_cv1:https://example.com/tmbed_cv1.onnx
+_tmbed_cv2:https://example.com/tmbed_cv2.onnx
+_tmbed_cv3:https://example.com/tmbed_cv3.onnx
+_tmbed_cv4:https://example.com/tmbed_cv4.onnx
+light_attention_membrane:https://example.com/light_attention_membrane.onnx
+light_attention_subcell:https://example.com/light_attention_subcell.onnx
+prott5_cons:https://example.com/prott5_cons.onnx
+prott5_sec:https://example.com/prott5_sec.onnx
+seth:https://example.com/seth.onnx
+vespag:https://example.com/vespag.onnx
+"
+
+# Archives for multi-file models
+MODEL_DOWNLOADS="$MODEL_DOWNLOADS
+_internal_prott5_onnx:https://example.com/prott5_onnx.tar.gz
+_internal_esm2_t36_onnx:https://example.com/esm2_t36_onnx.tar.gz
+_internal_prott5_tokenizer:https://example.com/prott5_tokenizer.tar.gz
+_internal_esm2_tokenizer:https://example.com/esm2_tokenizer.tar.gz
+"
+
+# Triton models to load
+TRITON_MODELS="prot_t5_pipeline,esm2_t33_pipeline,esm2_t36_pipeline,prott5_sec,prott5_cons,bind_embed,seth,tmbed,light_attention_subcell,light_attention_membrane,vespag"
