--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,13 @@ dependencies = [
     "onnxruntime>=1.16.0,<2.0.0; sys_platform != 'linux'",
     "tritonclient[grpc]>=2.61.0",
     "circuitbreaker>=2.0.0",
-
     # Git Dependencies
     "biotrainer @ git+https://github.com/sacdallago/biotrainer.git@v1.0.0",
     "protspace @ git+https://github.com/tsenoner/protspace.git@v2.0.0",
     "hvi_toolkit @ git+https://github.com/SebieF/hvi_toolkit.git@maintenance/update-biotrainer",
     "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
     "tmbed @ git+https://github.com/biocentral/TMbed.git@onnx-deployment",
+    "httpx>=0.28.1",
 ]
 
 [dependency-groups]
