--- a/.env.local
+++ b/.env.local
@@ -32,33 +32,30 @@ HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
 MODEL_REPOSITORY_PATH=./storage/model-repository
 
+
+
 MODEL_DOWNLOADS="
-_bind_embed_cv0:https://example.com/bind_embed_cv0.onnx
-_bind_embed_cv1:https://example.com/bind_embed_cv1.onnx
-_bind_embed_cv2:https://example.com/bind_embed_cv2.onnx
-_bind_embed_cv3:https://example.com/bind_embed_cv3.onnx
-_bind_embed_cv4:https://example.com/bind_embed_cv4.onnx
-_internal_esm2_t33_onnx:https://example.com/esm2_t33.onnx
-_tmbed_cv0:https://example.com/tmbed_cv0.onnx
-_tmbed_cv1:https://example.com/tmbed_cv1.onnx
-_tmbed_cv2:https://example.com/tmbed_cv2.onnx
-_tmbed_cv3:https://example.com/tmbed_cv3.onnx
-_tmbed_cv4:https://example.com/tmbed_cv4.onnx
-light_attention_membrane:https://example.com/light_attention_membrane.onnx
-light_attention_subcell:https://example.com/light_attention_subcell.onnx
-prott5_cons:https://example.com/prott5_cons.onnx
-prott5_sec:https://example.com/prott5_sec.onnx
-seth:https://example.com/seth.onnx
-vespag:https://example.com/vespag.onnx
+_bind_embed_cv0/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv0.onnx
+_bind_embed_cv1/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv1.onnx
+_bind_embed_cv2/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv2.onnx
+_bind_embed_cv3/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv3.onnx
+_bind_embed_cv4/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv4.onnx
+_internal_esm2_t33_onnx/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_internal_esm2_t33_onnx.onnx
+_internal_esm2_t36_onnx/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_internal_esm2_t36_onnx.tar.gz
+_internal_prott5_onnx/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_internal_prott5_onnx.tar.gz
+_tmbed_cv0/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv0.onnx
+_tmbed_cv1/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv1.onnx
+_tmbed_cv2/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv2.onnx
+_tmbed_cv3/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv3.onnx
+_tmbed_cv4/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv4.onnx
+light_attention_membrane/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/light_attention_membrane.onnx
+light_attention_subcell/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/light_attention_subcell.onnx
+prott5_cons/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/prott5_cons.onnx
+prott5_sec/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/prott5_sec.onnx
+seth/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/seth.onnx
+vespag/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/vespag.onnx
 "
 
-# Archives for multi-file models
-MODEL_DOWNLOADS="$MODEL_DOWNLOADS
-_internal_prott5_onnx:https://example.com/prott5_onnx.tar.gz
-_internal_esm2_t36_onnx:https://example.com/esm2_t36_onnx.tar.gz
-_internal_prott5_tokenizer:https://example.com/prott5_tokenizer.tar.gz
-_internal_esm2_tokenizer:https://example.com/esm2_tokenizer.tar.gz
-"
 
 # Triton models to load
 TRITON_MODELS="prot_t5_pipeline,esm2_t33_pipeline,esm2_t36_pipeline,prott5_sec,prott5_cons,bind_embed,seth,tmbed,light_attention_subcell,light_attention_membrane,vespag"
