--- a/storage/model-repository/Dockerfile.init
+++ b/storage/model-repository/Dockerfile.init
@@ -3,7 +3,7 @@ FROM python:3.12-slim
 RUN apt-get update && apt-get install -y curl wget ca-certificates && \
     rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir httpx tqdm
+RUN pip install --no-cache-dir httpx tqdm onnx
 
 COPY init_models.py /usr/local/bin/init_models.py
 RUN chmod +x /usr/local/bin/init_models.py
