--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,14 @@ name = "biocentral-server"
 version = "0.2.5"
 description = "Compute server for the biocentral frontend"
 authors = [
-    {name = "Sebastian Franz", email = "sebastian.franz@tum.de"},
-    {name = "Tobias Olenyi", email = "tobias.olenyi@tum.de"},
+    { name = "Sebastian Franz", email = "sebastian.franz@tum.de" },
+    { name = "Tobias Olenyi", email = "tobias.olenyi@tum.de" },
 ]
-license = {text = "GPL-3.0"}
+license = { text = "GPL-3.0" }
 readme = "README.md"
 requires-python = ">=3.11.9,<3.13"
 dependencies = [
     # Backend
-    "flask>=3.0.2,<4.0.0",
     "taxoniq>=1.0.1,<2.0.0",
     "blosc2>=2.7.1,<3.0.0",
     "psycopg[binary]>=3.2.3,<4.0.0",
@@ -23,13 +22,16 @@ dependencies = [
     "onnxruntime>=1.16.0,<2.0.0; sys_platform != 'linux'",
     "tritonclient[grpc]>=2.61.0",
     "circuitbreaker>=2.0.0",
+    "httpx>=0.28.1",
+    "pydantic>=2.12.3",
+    "fastapi>=0.120.2",
+    "uvicorn>=0.38.0",
     # Git Dependencies
-    "biotrainer @ git+https://github.com/biocentral/biotrainer.git@feat/export-embedding-transform",
+    "biotrainer @ git+https://github.com/biocentral/biotrainer.git@fix/api-improvements",
     "protspace @ git+https://github.com/biocentral/protspace.git@chore/matplotlib-optional",
     "hvi_toolkit @ git+https://github.com/SebieF/hvi_toolkit.git@maintenance/update-biotrainer",
     "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
     "tmbed @ git+https://github.com/biocentral/TMbed.git@onnx-deployment",
-    "httpx>=0.28.1",
 ]
 
 [dependency-groups]
