feat: Adding body size limit middleware
Stops request with larger size than defined maximum (default: 200MB)

Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# SERVER LIMITS
+## Max size of files that can be send to endpoints (default: 200 MB)
+MAX_FILE_SIZE=209715200
+
 # EMBEDDINGS DB
 POSTGRES_HOST=embeddings-db
 POSTGRES_PORT=5432
