fix: Adding triton config to .env files
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,39 @@ FILES_DATA_DIR=./storage/files
 SERVER_TEMP_DATA_DIR=./storage/server_temp_files
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
+
+# TRITON
+TRITON_GRPC_URL=http://localhost:8001
+TRITON_HTTP_URL=http://localhost:8000
+TRITON_POOL_SIZE=4
+TRITON_TIMEOUT=30
+TRITON_CONNECTION_TIMEOUT=10
+TRITON_CIRCUIT_BREAKER_THRESHOLD=5
+TRITON_CIRCUIT_BREAKER_TIMEOUT=60
+TRITON_MAX_BATCH_SIZE=32
+USE_TRITON=true
+
+MODEL_DOWNLOADS="
+_bind_embed_cv0/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv0.onnx
+_bind_embed_cv1/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv1.onnx
+_bind_embed_cv2/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv2.onnx
+_bind_embed_cv3/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv3.onnx
+_bind_embed_cv4/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv4.onnx
+_internal_esm2_t33_onnx/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_internal_esm2_t33_onnx.onnx
+_internal_esm2_t36_onnx/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_internal_esm2_t36_onnx.tar.gz
+_internal_prott5_onnx/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_internal_prott5_onnx.tar.gz
+_tmbed_cv0/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv0.onnx
+_tmbed_cv1/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv1.onnx
+_tmbed_cv2/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv2.onnx
+_tmbed_cv3/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv3.onnx
+_tmbed_cv4/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_tmbed_cv4.onnx
+light_attention_membrane/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/light_attention_membrane.onnx
+light_attention_subcell/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/light_attention_subcell.onnx
+prott5_cons/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/prott5_cons.onnx
+prott5_sec/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/prott5_sec.onnx
+seth/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/seth.onnx
+vespag/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/vespag.onnx
+"
+
+# Triton models to load
+TRITON_MODELS="prot_t5_pipeline,esm2_t33_pipeline,esm2_t36_pipeline,prott5_sec,prott5_cons,bind_embed,seth,tmbed,light_attention_subcell,light_attention_membrane,vespag"
