--- a/.env.local
+++ b/.env.local
@@ -22,7 +22,7 @@ TRITON_CONNECTION_TIMEOUT=10
 TRITON_CIRCUIT_BREAKER_THRESHOLD=5
 TRITON_CIRCUIT_BREAKER_TIMEOUT=60
 TRITON_MAX_BATCH_SIZE=32
-USE_TRITON=false
+USE_TRITON=true
 
 # DIRECTORIES
 EMBEDDINGS_DATA_DIR=./storage/embeddings/postgres
