fix: Adding missing MODEL_REPOSITORY_PATH variable consistently to env files
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ SEAWEEDFS_FILER_PORT=8888
 EMBEDDINGS_DATA_DIR=./storage/embeddings
 FILES_DATA_DIR=./storage/files
 SERVER_TEMP_DATA_DIR=./storage/server_temp_files
+MODEL_REPOSITORY_PATH=/.storage/model-repository
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
 
