--- a/.env.local
+++ b/.env.local
@@ -28,9 +28,9 @@ USE_TRITON=true
 EMBEDDINGS_DATA_DIR=./storage/embeddings/postgres
 FILES_DATA_DIR=./storage/files
 SERVER_TEMP_DATA_DIR=./storage/server_temp_files
+MODEL_REPOSITORY_PATH=/.storage/model-repository
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
-MODEL_REPOSITORY_PATH=./storage/model-repository
 
 MODEL_DOWNLOADS="
 _bind_embed_cv0/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv0.onnx
