--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,7 @@ services:
     networks:
       - biocentral-network
 
+  # File storage stack
   seaweedfs-master:
     image: chrislusf/seaweedfs
     command: "master -ip=seaweedfs-master -port=9333 -port.grpc=19333"
@@ -138,6 +139,7 @@ services:
       retries: 20
       start_period: 30s
 
+  # Triton stack
   triton-model-init:
     build:
       context: ./storage/model-repository
@@ -195,6 +197,31 @@ services:
       retries: 5
       start_period: 30s
 
+  # Monitoring stack
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "${PROMETHEUS_PORT:-9090}:9090"
+    volumes:
+      - ./monitoring/prometheus:/etc/prometheus
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention.time=30d'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
+    restart: unless-stopped
+    networks:
+      - biocentral-network
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "--quiet", "http://localhost:9090/-/healthy" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
 volumes:
   postgres_data:
     driver: local
@@ -232,6 +259,8 @@ volumes:
       type: none
       o: bind
       device: ${MODEL_REPOSITORY_PATH:-./storage/model-repository}
+  prometheus_data:
+    driver: local
 networks:
   biocentral-network:
     driver: bridge
