--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,13 +25,15 @@ dependencies = [
     "pydantic>=2.12.4",
     "fastapi>=0.121.0",
     "uvicorn>=0.38.0",
+    "prometheus-client>=0.20.0",
+    "prometheus-fastapi-instrumentator>=6.1.0",
+    "fastapi-limiter>=0.1.6",
     # Git Dependencies
     "biotrainer @ git+https://github.com/biocentral/biotrainer.git@fix/api-improvements",
     "protspace @ git+https://github.com/biocentral/protspace.git@chore/matplotlib-optional",
     "hvi_toolkit @ git+https://github.com/SebieF/hvi_toolkit.git@maintenance/update-biotrainer",
     "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
     "tmbed @ git+https://github.com/biocentral/TMbed.git@onnx-deployment",
-    "fastapi-limiter>=0.1.6",
 ]
 
 [dependency-groups]
