feat: Adding exotox predictor
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.local
+++ b/.env.local
@@ -52,7 +52,8 @@ prott5_cons/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/
 prott5_sec/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/prott5_sec.onnx
 seth/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/seth.onnx
 vespag/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/vespag.onnx
+exotox/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/exotox.onnx
 "
 
 # Triton models to load
-TRITON_MODELS="prot_t5_pipeline,esm2_t33_pipeline,esm2_t36_pipeline,prott5_sec,prott5_cons,bind_embed,seth,tmbed,light_attention_subcell,light_attention_membrane,vespag"
+TRITON_MODELS="prot_t5_pipeline,esm2_t33_pipeline,esm2_t36_pipeline,prott5_sec,prott5_cons,bind_embed,seth,tmbed,light_attention_subcell,light_attention_membrane,vespag,exotox"
