--- a/docker-compose.triton-test.yml
+++ b/docker-compose.triton-test.yml
@@ -24,6 +24,7 @@ services:
       --load-model=light_attention_subcell
       --load-model=light_attention_membrane
       --load-model=vespag
+      --load-model=exotox
       --disable-auto-complete-config
       --log-verbose=1
     ports:
