fix: Fixing protspace api and re-enabling projection service
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "fastapi-limiter>=0.1.6",
     # Git Dependencies
     "biotrainer @ git+https://github.com/biocentral/biotrainer.git@fix/api-improvements",
-    "protspace @ git+https://github.com/biocentral/protspace.git@chore/matplotlib-optional",
+    "protspace @ git+https://github.com/tsenoner/protspace.git@v3.1.1",
     "hvi_toolkit @ git+https://github.com/SebieF/hvi_toolkit.git@maintenance/update-biotrainer",
     "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
     "tmbed @ git+https://github.com/biocentral/TMbed.git@onnx-deployment",
