fix: Adding separate bind volume for prometheus
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.local
+++ b/.env.local
@@ -31,6 +31,7 @@ SERVER_TEMP_DATA_DIR=./storage/server_temp_files
 MODEL_REPOSITORY_PATH=/.storage/model-repository
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
+PROMETHEUS_DATA_DIR=~/.storage/monitoring
 
 MODEL_DOWNLOADS="
 _bind_embed_cv0/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv0.onnx
