--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ SERVER_TEMP_DATA_DIR=./storage/server_temp_files
 MODEL_REPOSITORY_PATH=/.storage/model-repository
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
+PROMETHEUS_DATA_DIR=~/.storage/monitoring
 
 # TRITON
 TRITON_GRPC_URL=http://localhost:8001
