--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -268,6 +268,10 @@ volumes:
       device: ${MODEL_REPOSITORY_PATH:-./storage/model-repository}
   prometheus_data:
     driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PROMETHEUS_DATA_DIR:-./storage/monitoring}
 networks:
   biocentral-network:
     driver: bridge
