--- a/.env.example
+++ b/.env.example
@@ -21,10 +21,10 @@ SEAWEEDFS_FILER_PORT=8888
 EMBEDDINGS_DATA_DIR=./storage/embeddings
 FILES_DATA_DIR=./storage/files
 SERVER_TEMP_DATA_DIR=./storage/server_temp_files
-MODEL_REPOSITORY_PATH=/.storage/model-repository
+MODEL_REPOSITORY_PATH=./storage/model-repository
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
-PROMETHEUS_DATA_DIR=~/.storage/monitoring
+PROMETHEUS_DATA_DIR=./storage/monitoring
 
 # TRITON
 TRITON_GRPC_URL=http://localhost:8001
