hotfix: Fixing prometheus config dir
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.local
+++ b/.env.local
@@ -32,6 +32,7 @@ MODEL_REPOSITORY_PATH=./storage/model-repository
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
 PROMETHEUS_DATA_DIR=./storage/monitoring
+PROMETHEUS_CONFIG_DIR=./monitoring/prometheus
 
 MODEL_DOWNLOADS="
 _bind_embed_cv0/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv0.onnx
