--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ MODEL_REPOSITORY_PATH=./storage/model-repository
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
 PROMETHEUS_DATA_DIR=./storage/monitoring
+PROMETHEUS_CONFIG_DIR=./monitoring/prometheus
 
 # TRITON
 TRITON_GRPC_URL=http://localhost:8001
