--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -40,15 +40,15 @@ services:
       timeout: 5s
       retries: 5
 
-  # redis-commander:
-  #   image: rediscommander/redis-commander:latest
-  #   environment:
-  #     - REDIS_HOSTS=local:redis-jobs:6379
-  #   ports:
-  #     - "8081:8081"
-  #   depends_on:
-  #     - redis-jobs
-  #   restart: unless-stopped
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis-jobs:6379
+    ports:
+      - "8081:8081"
+    depends_on:
+      - redis-jobs
+    restart: unless-stopped
 
   # File storage stack
   seaweedfs-master:
@@ -85,15 +85,15 @@ services:
       start_period: 20s
 
   # Triton stack
-  # triton-model-init:
-  #   build:
-  #     context: ./storage/model-repository
-  #     dockerfile: Dockerfile.init
-  #   volumes:
-  #     - triton_models:/models
-  #   environment:
-  #     - MODEL_REPOSITORY_PATH=/models
-  #     - MODEL_DOWNLOADS=${MODEL_DOWNLOADS:-}
+  triton-model-init:
+    build:
+      context: ./storage/model-repository
+      dockerfile: Dockerfile.init
+    volumes:
+      - triton_models:/models
+    environment:
+      - MODEL_REPOSITORY_PATH=/models
+      - MODEL_DOWNLOADS=${MODEL_DOWNLOADS:-}
 
   triton:
     build:
@@ -145,26 +145,26 @@ services:
       start_period: 30s
 
   # Monitoring stack
-  # prometheus:
-  #   image: prom/prometheus:latest
-  #   container_name: prometheus
-  #   volumes:
-  #     - ${PROMETHEUS_CONFIG_DIR:-./monitoring/prometheus}:/etc/prometheus
-  #     - prometheus_data:/prometheus
-  #   command:
-  #     - '--config.file=/etc/prometheus/prometheus.yml'
-  #     - '--storage.tsdb.path=/prometheus'
-  #     - '--storage.tsdb.retention.time=30d'
-  #     - '--web.console.libraries=/etc/prometheus/console_libraries'
-  #     - '--web.console.templates=/etc/prometheus/consoles'
-  #     - '--web.enable-lifecycle'
-  #   restart: unless-stopped
-  #   network_mode: host
-  #   healthcheck:
-  #     test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:9090/-/healthy"]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 3
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ${PROMETHEUS_CONFIG_DIR:-./monitoring/prometheus}:/etc/prometheus
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention.time=30d'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
+    restart: unless-stopped
+    network_mode: host
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:9090/-/healthy"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   postgres_data:
