fix: Adding landing response from landing.html
Signed-off-by: Sebastian Franz <sebastian.franz@tum.de>
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
 PROMETHEUS_DATA_DIR=./storage/monitoring
 PROMETHEUS_CONFIG_DIR=./monitoring/prometheus
+ASSETS_DIR=./assets
 
 # TRITON
 TRITON_GRPC_URL=http://localhost:8001
