--- a/.env.local
+++ b/.env.local
@@ -33,6 +33,7 @@ HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
 PROMETHEUS_DATA_DIR=./storage/monitoring
 PROMETHEUS_CONFIG_DIR=./monitoring/prometheus
+ASSETS_DIR=./assets
 
 MODEL_DOWNLOADS="
 _bind_embed_cv0/1:https://nextcloud.cit.tum.de/public.php/dav/files/CA9Dx2em9k8pBA3/_bind_embed_cv0.onnx
